syntax = "proto3";

package babl;

service Storage {
  rpc Info(InfoRequest) returns (InfoResponse) {}
  rpc Upload(stream UploadRequest) returns (stream UploadResponse) {}
}

message InfoRequest {}

message InfoResponse {
  string version = 1;
  uint32 total_storage = 10; // in mb
  uint32 free_storage = 11;  // in mb
}

message UploadRequest {
  bytes chunk = 1;
  uint64 total_bytes_sent = 2; // bytes sent so far incl. current chunk
  bool complete = 3;
}

message UploadResponse {
  uint64 blob_id = 1;
  string blob_url = 2;
  bool complete = 3;
  bool success = 4;
  string error = 5;
}
